--- a/css/kita_pelosok_small.css
+++ b/css/kita_pelosok_small.css
@@ -1,5 +1,5 @@
 /* Landscape phone to portrait tablet */
-@media (max-width: 576px) {
+@media (max-width: 992px) {
   /* general */
   .page-section {
     padding-top: 100px;
@@ -33,7 +33,8 @@
 
   /* mobile navbar */
   #mainNav {
-    height: 58.57px;
+    /* height: 58.57px; */
+    background-color: transparent;
   }
 
   #mainNav .navbar-toggler {
@@ -82,7 +83,6 @@
     box-shadow: 0px 30px 120px rgba(37, 106, 129, 0.06);
     border-radius: 0px 0px 0px 30px;
     background-repeat: no-repeat;
-    width: 360px;
     background-size: cover;
   }
 
@@ -181,7 +181,8 @@
   }
 
   #about .team-photo-sm {
-    width: 417px;
+    /* width: 417px; */
+    /* max-width: ; */
     height: 353px;
 
     background-image: url("../img/dummy-bg.jpg");
@@ -197,5 +198,9 @@
 
   #about .section-subheading {
     text-align: left;
+  }
+
+  #team ul.list-inline {
+    padding-bottom: 50px;
   }
 }
